2001-07-02  Jim Meyering  <meyering@lucent.com>

	The following changes were prompted by suggestions from Bruno Haible.

	* jm-glibc-io.m4n: New file, the template from which jm-glibc-io.m4
	is now generated.
	* Makefile.am.in (Makefile.am): Include jm-glibc-io.m4n in emitted
	definition of EXTRA_DIST.
	(Makefile.am): Emit the dependency, `all-local: jm-glibc-io.m4' to
	ensure that the generated file is created/updated whenever the list
	of $(unlocked_functions) is changed.
	(jm-glibc-io.m4): New rule.
	(unlocked-io.h): New rule -- currently unused.

2001-06-24  Jim Meyering  <meyering@lucent.com>

	* regex.m4 (jm_INCLUDED_REGEX): Use a quadrigraph to represent an
	unmatched right bracket, rather than kludging it with an extra,
	falsely-matching quote in a comment.  Patch by Akim Demaille.

2001-05-27  Jim Meyering  <meyering@lucent.com>

	* prereq.m4 (jm_PREREQ_READUTMP): Check for ut_type in struct utmpx.
	Check for ut_type in struct utmp.

2001-05-22  Jim Meyering  <meyering@lucent.com>

	* strftime.m4 (_jm_STRFTIME_PREREQS): Don't use AC_LIBOBJ(strftime),
	now that we use the package-supplied version unconditionally.
	(jm_FUNC_STRFTIME): Don't replace strftime, for the same reason.

2001-05-21  Jim Meyering  <meyering@lucent.com>

	* regex.m4: Change a couple backticks to single quotes to avoid shell
	syntax errors.

2001-05-19  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* dos.m4 (jm_AC_DOS): Check for _WIN32, __WIN32__, and __MSDOS__.

2001-05-11  Paul Eggert  <eggert@twinsun.com>

	* m4/strftime.m4 (jm_FUNC_GNU_STRFTIME):
	Don't bother to check library strftime, since
	we'll be using our own my_strftime function anyway.
	Define my_strftime instead of strftime.

2001-05-15  Jim Meyering  <meyering@lucent.com>

	* regex.m4: Use proper quoting so brackets appear in the test program.
	Reported by, and with help from, Bruno Haible.

2001-05-13  Jim Meyering  <meyering@lucent.com>

	* jm-macros.m4 (major_t, minor_t): Define to unsigned int if undefined.
